test/modules/standard/FileSystem/lydia/remove/nonempty_dir.good
nonempty_dir.chpl:4: error: uncaught error - Directory not empty in remove with path "nonempty"
cat: nonempty: Is a directory
