test/modules/standard/FileSystem/lydia/remove/nonempty_dir.chpl
use FileSystem;
// This test tries to remove a directory that still has contents
var dirname = "nonempty";
remove(dirname);
